--- a/signup.html
+++ b/signup.html
@@ -37,13 +37,7 @@
 
   // Your web app's Firebase configuration
   const firebaseConfig = {
-    apiKey: "AIzaSyCRrCF8LxrVWtvb1jJLk5wgF6GytRVWWOA",
-    authDomain: "authentication-app-7b287.firebaseapp.com",
-    databaseURL: "https://authentication-app-7b287-default-rtdb.firebaseio.com",
-    projectId: "authentication-app-7b287",
-    storageBucket: "authentication-app-7b287.appspot.com",
-    messagingSenderId: "662160079444",
-    appId: "1:662160079444:web:be417b70a44322f3aa8bc1"
+    //yout config code
   };
 
   // Initialize Firebase
